--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,12 @@
 
 <head>
 	<meta charset="utf-8" />
-	<meta name="viewport" content="width=device-width, initial-scale=1" />
+	<!-- Тэг для правильного отображения страницы при работе с Material ui -->
+	<meta name="viewport" content="minimum-scale=1, initial-scale=1, width=device-width" />
 	<meta name="theme-color" content="#000000" />
 	<meta name="description" content="Web site created using create-react-app" />
-
+	<!-- Шрифт, необходимый для работы с Material ui -->
+	<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" />
 	<title>Contacts app</title>
 </head>
 
